@startuml
skinparam classAttributeIconSize 0
skinparam classBackgroundColor #FEFEFE
skinparam linetype ortho
title Diagramme de Classes - EduManager

class User {
  +id : BigInt <<PK>>
  +identifier : String <<unique>>
  +name : String
  +email : String <<unique>>
  +password : String <<hashed>>
  +role : Enum {admin, teacher, eleve}
  +status : Enum {pending, approved, rejected}
  +class_id : FK?
  +date_of_birth : Date
  +phone : String
  +address : Text
  +profile_photo_path : String
  +desired_class : String
  --
  +isAdmin() : bool
  +isTeacher() : bool
  +isStudent() : bool
  +isApproved() : bool
  +class() : belongsTo(SchoolClass)
  +grades() : hasMany(Grade)
  +attendances() : hasMany(Attendance)
  +subjects() : belongsToMany(Subject)
  +assignedClasses() : belongsToMany(SchoolClass)
  +teacherAssignments() : hasMany(TeacherAssignment)
}

class AcademicYear {
  +id : BigInt <<PK>>
  +name : String
  +start_date : Date
  +end_date : Date
  +is_current : Bool
  --
  +classes() : hasMany(SchoolClass)
  +teacherAssignments() : hasMany(TeacherAssignment)
}

class Level {
  +id : BigInt <<PK>>
  +name : String
  +order : Int
  +cycle : Enum {college, lycee}
  +serie : String?
  --
  +classes() : hasMany(SchoolClass)
  +subjects() : belongsToMany(Subject)
}

class SchoolClass {
  +id : BigInt <<PK>>
  +name : String
  +level_id : FK
  +academic_year_id : FK
  +capacity : Int = 40
  --
  +level() : belongsTo(Level)
  +academicYear() : belongsTo(AcademicYear)
  +students() : hasMany(User)
  +teachers() : belongsToMany(User)
  +subjects() : belongsToMany(Subject)
  +teacherAssignments() : hasMany(TeacherAssignment)
  +groups() : hasMany(ClassGroup)
}

class Subject {
  +id : BigInt <<PK>>
  +name : String
  +code : String <<unique>>
  +coefficient : Float
  +description : Text
  +is_active : Bool
  +is_core_subject : Bool
  +hours_per_week : Float
  --
  +levels() : belongsToMany(Level)
  +teachers() : belongsToMany(User)
  +grades() : hasMany(Grade)
  +getCoefficientForLevel(levelId) : float
  +isCompulsoryForLevel(levelId) : bool
}

class TeacherAssignment {
  +id : BigInt <<PK>>
  +teacher_id : FK
  +class_id : FK
  +subject_id : FK
  +academic_year_id : FK
  --
  +teacher() : belongsTo(User)
  +schoolClass() : belongsTo(SchoolClass)
  +subject() : belongsTo(Subject)
  +academicYear() : belongsTo(AcademicYear)
}

class Grade {
  +id : BigInt <<PK>>
  +user_id : FK
  +subject_id : FK
  +grade : Decimal(5,2) [0..20]
  +type : String
  +coefficient : Int
  +semester : Int {1,2}
  +academic_year_id : FK?
  +date : Date
  +comments : Text
  +appreciation : String
  --
  +user() : belongsTo(User)
  +subject() : belongsTo(Subject)
}

class Attendance {
  +id : BigInt <<PK>>
  +user_id : FK
  +date : Date
  +status : Enum {present, absent, late, excused}
  +reason : String
  +justified : Bool
  --
  +user() : belongsTo(User)
  +isPresent() : bool
  +isAbsent() : bool
}

class Schedule {
  +id : BigInt <<PK>>
  +class_id : FK
  +subject_id : FK
  +teacher_id : FK
  +day_of_week : TinyInt [1..5]
  +start_time : Time
  +end_time : Time
  +room : String
  --
  +schoolClass() : belongsTo(SchoolClass)
  +subject() : belongsTo(Subject)
  +teacher() : belongsTo(User)
}

class Assignment {
  +id : BigInt <<PK>>
  +title : String
  +description : Text
  +due_date : DateTime
  +subject_id : FK
  +class_id : FK
  +teacher_id : FK
  +points : Int
  +status : Enum {draft, published, graded}
}

class Event {
  +id : BigInt <<PK>>
  +title : String
  +start_date : DateTime
  +end_date : DateTime
  +type : Enum {exam, holiday, meeting, other}
  +class_id : FK?
  +is_all_day : Bool
}

class ClassGroup {
  +id : BigInt <<PK>>
  +name : String
  +school_class_id : FK
  +academic_year_id : FK
  +max_students : Int
  +is_active : Bool
  --
  +schoolClass() : belongsTo(SchoolClass)
  +students() : belongsToMany(User)
}

' === Associations ===
User "0..1" -- "0..*" SchoolClass : class_id
User "0..*" -- "0..*" SchoolClass : class_teacher
User "0..*" -- "0..*" Subject : teacher_subjects
SchoolClass "0..*" -- "0..*" Subject : class_subject
Level "1" -- "0..*" SchoolClass
Level "0..*" -- "0..*" Subject : level_subject
AcademicYear "1" -- "0..*" SchoolClass
AcademicYear "1" -- "0..*" TeacherAssignment
User "1" -- "0..*" TeacherAssignment : teacher_id
SchoolClass "1" -- "0..*" TeacherAssignment
Subject "1" -- "0..*" TeacherAssignment
User "1" -- "0..*" Grade
Subject "1" -- "0..*" Grade
User "1" -- "0..*" Attendance
SchoolClass "1" -- "0..*" Schedule
Subject "1" -- "0..*" Schedule
User "1" -- "0..*" Schedule : teacher_id
SchoolClass "1" -- "0..*" Assignment
SchoolClass "1" -- "0..*" ClassGroup
ClassGroup "0..*" -- "0..*" User : class_group_student

@enduml
